test add width 100% to prevent broken layout

--- a/src/components/scss/post-list.scss
+++ b/src/components/scss/post-list.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
+  width: 100%;
 
   &__item {
     border: 1px solid #f1f1f1;
